--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.13.3",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
